include(GoogleTest)

set(BVH2_TEST_AVX2_FLAG "")
if(BVH2_ENABLE_AVX2)
    include(CheckCXXCompilerFlag)
    if(MSVC)
        check_cxx_compiler_flag("/arch:AVX2" BVH2_TEST_HAS_ARCH_AVX2)
        if(BVH2_TEST_HAS_ARCH_AVX2)
            set(BVH2_TEST_AVX2_FLAG "/arch:AVX2")
        endif()
    else()
        check_cxx_compiler_flag("-mavx2" BVH2_TEST_HAS_MAVX2)
        if(BVH2_TEST_HAS_MAVX2)
            set(BVH2_TEST_AVX2_FLAG "-mavx2")
        endif()
    endif()
endif()

set(BVH2_TEST_OPENMP_TARGET "")
if(BVH2_ENABLE_OPENMP)
    find_package(OpenMP QUIET)
    if(OpenMP_CXX_FOUND)
        set(BVH2_TEST_OPENMP_TARGET OpenMP::OpenMP_CXX)
    endif()
endif()

function(bvh2_configure_test_target target)
    if(MSVC)
        target_compile_options(${target} PRIVATE /W4)
    else()
        target_compile_options(${target} PRIVATE -Wall -Wextra)
    endif()

    if(BVH2_TEST_AVX2_FLAG)
        target_compile_options(${target} PRIVATE ${BVH2_TEST_AVX2_FLAG})
    endif()

    if(BVH2_TEST_OPENMP_TARGET)
        target_link_libraries(${target} PRIVATE ${BVH2_TEST_OPENMP_TARGET})
    endif()
endfunction()

add_executable(integration_test main.cpp)
target_link_libraries(integration_test PRIVATE BVH2)
bvh2_configure_test_target(integration_test)

function(bvh2_add_gtest target source)
    add_executable(${target} ${source})
    target_link_libraries(${target} PRIVATE GTest::gtest_main BVH2)
    bvh2_configure_test_target(${target})
    gtest_discover_tests(${target})
endfunction()

bvh2_add_gtest(unit_test_radix_sort unit_test_radix_sort.cpp)
bvh2_add_gtest(unit_test_BVH unit_test_BVH.cpp)
bvh2_add_gtest(unit_test_octree unit_test_octree.cpp)
bvh2_add_gtest(unit_test_quadtree unit_test_quadtree.cpp)

bvh2_add_gtest(perf_test_BVH perf_test_BVH.cpp)
bvh2_add_gtest(perf_test_radix_sort perf_test_radix_sort.cpp)
bvh2_add_gtest(perf_test_octree perf_test_octree.cpp)
bvh2_add_gtest(perf_test_quadtree unit_test_quadtree_performance.cpp)
